force-app/main/default/objects/Slack_Document__c/Slack_Document__c.object-meta.xml
<CustomObject>
    <label>Slack Document</label>
    <nameField>
        <displayFormat>DOC-{00000}</displayFormat>
        <label>Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slack Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>