force-app/main/default/objects/Slack_Document__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category of the document</description>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 