force-app/main/default/objects/Slack_Document__c/fields/Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>Channel_ID__c</fullName>
    <description>Slack channel identifier where the document originated</description>
    <label>Channel ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>