force-app/main/default/objects/Slack_Document__c/fields/Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Name__c</fullName>
    <description>Human-readable name of the Slack channel</description>
    <label>Channel Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>