force-app/main/default/objects/Slack_Document__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <description>Confidence score of the document processing</description>
    <label>Confidence Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField> 