force-app/main/default/objects/Slack_Document__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>Full text content of the document</description>
    <label>Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>