force-app/main/default/objects/Slack_Document__c/fields/Conversation_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Analysis__c</fullName>
    <description>JSON data containing conversation analysis results</description>
    <label>Conversation Analysis</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField> 