force-app/main/default/objects/Slack_Document__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <description>User who created the document</description>
    <label>Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 