force-app/main/default/objects/Slack_Document__c/fields/Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Document_ID__c</fullName>
    <description>Unique identifier for the document from Slack</description>
    <externalId>true</externalId>
    <label>Document ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>