force-app/main/default/objects/Slack_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Type of document from Slack</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thread</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
                <default>true</default>
                <label>Channel</label>
            </value>
            <value>
                <fullName>Direct</fullName>
                <label>Direct Message</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>