force-app/main/default/objects/Slack_Document__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>External ID from the source system used for upsert operations</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField> 