force-app/main/default/objects/Slack_Document__c/fields/FAQ_Count__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Count__c</fullName>
    <description>Number of FAQs generated from this document</description>
    <defaultValue>0</defaultValue>
    <label>FAQ Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 