force-app/main/default/objects/Slack_Document__c/fields/Message_Count__c.field-meta.xml
<CustomField>
    <fullName>Message_Count__c</fullName>
    <description>Number of messages in the document</description>
    <label>Message Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>