force-app/main/default/objects/Slack_Document__c/fields/Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Processed_Date__c</fullName>
    <description>When the document was processed and synced</description>
    <label>Processed Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>