force-app/main/default/objects/Slack_Document__c/fields/Slack_Channel__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel__c</fullName>
    <description>Slack channels associated with this document</description>
    <label>Slack Channel</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField> 