force-app/main/default/objects/Slack_Document__c/fields/Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Source_URL__c</fullName>
    <description>Link to original document or message</description>
    <label>Source URL</label>
    <type>Url</type>
</CustomField>