force-app/main/default/objects/Slack_Document__c/fields/Thread_ID__c.field-meta.xml
<CustomField>
    <fullName>Thread_ID__c</fullName>
    <description>Slack thread identifier if document is from a thread</description>
    <label>Thread ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>