force-app/main/default/objects/Slack_Document__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>When the document was created in Slack</description>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>